--- a/src/components/serviceCategory/serviceCategory.css
+++ b/src/components/serviceCategory/serviceCategory.css
@@ -72,4 +72,11 @@
   .serviceCategory_textHeadingd {
     width: 90%;
   }
+
+  .serviceCategory_sectionOne_gen {
+    padding-left: 10px;
+    padding-right: 10px;
+
+    width: 80%;
+  }
 }
