--- a/src/screens/contact/contact.css
+++ b/src/screens/contact/contact.css
@@ -30,7 +30,7 @@
 .contact_genLeftCont {
   width: 50%;
   /* height: 700px; */
-  background: #3c3d73;
+  background: rgba(33, 133, 252);
   border-radius: 30px 0px 0px 30px;
   padding: 40px;
   box-sizing: border-box;
@@ -64,7 +64,7 @@
 }
 
 .contact_genLeftContHeadText_span {
-  color: #85c04e;
+  color: #fff;
   font-family: Poppins;
   font-size: 40px;
   font-style: normal;
@@ -136,7 +136,7 @@
 
 .contact_genLeftCont_BtnSub {
   border-radius: 39px;
-  background: linear-gradient(127deg, #85c04e 0%, #3c3d73 100%);
+  background: linear-gradient(127deg, #fab800 0%, #2185fc 100%);
 
   /* w */
   box-shadow: 0px 10px 15px 0px rgba(1, 115, 153, 0.2);
@@ -183,6 +183,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  word-wrap: break-word;
 }
 
 .contact_social_accts {
